--- a/2022.7编程学习.md
+++ b/2022.7编程学习.md
@@ -226,12 +226,477 @@ typedef int* intPointer; (数据结构)
 class Car
 {
 public:
+    static const float FULL_GAS = 85 //除了静态常量，其他都不可以赋值
 	std::string color;
     std::string engine;
     float gas_tank;
     usigned int Wheel;
+    
+    void fill_tank(float liter);// 方法的声明
 };
+
+void Car::fill_tank(float liter)
+{
+    ...
+}
+// "::"作用域解析符，表示这个方法是来自于Car类中的
+
+int main
+{
+    Car mycar;
+    mycar.fill_tank;
+    return 0;
+}
 ```
+
+# P16 构造器和析构器
+
+## 构造器
+
+作为一种方法，在类里面声明，外面详细说明，进行类的初始化。
+
+如果没有自定义构造器，编译器会定义空构造器。
+
+```c++
+class Car
+{
+	...
+	Car(void)
+	...
+};
+
+Car::Car(void)
+{
+	color;
+    engine;
+    gas_tank;
+    int Wheel;	
+}
+```
+
+## 构造对象数组
+
+```c++
+Car mycar[10];
+mycar[x].running
+```
+
+## 析构器
+
+销毁对象、清理对象。
+
+```c++
+~ClassName();
+```
+
+#  P17 this指针
+
+## this指针
+
+指向当前类生成的对象
+
+```c++
+class Human{
+	char fishc;
+	Human(char fishc);
+}
+Human:Human(char fishc){
+	this -> fishc = fishc;
+    //左边为当前对象的属性，右边为构造器传入的fishc参数。
+}
+```
+
+## 类的继承
+
+```c++
+class SubClass : public SuperClass {...}
+
+class Pig : public Animal {...}
+```
+
+```c++
+class Animal
+{
+public:
+    std::string mouth;
+    
+    void eat();
+    void slepp();
+    void drool();
+}
+
+class Pig : Animal
+{
+public:
+    void climb();
+};
+
+class Turtle : public Animal
+{
+public: 
+    void swim(); 
+};
+
+void Animal::eat(){}
+void Animal::slepp(){}
+void Animal::drool(){}
+...
+void Pig::climb(){}
+...
+    
+int main()
+{
+    Pig pig;
+    Turtle turtle;
+    
+    pig.eat();
+    pig.climb();
+    xxx
+}
+
+```
+
+# P18继承中的构造器和析构器
+
+```c++
+Animal::animal( std::string theName ){
+	name = theName;
+}
+
+Pig::Pig( std::string theName ):Animal( theName ){}
+```
+
+# P19访问控制
+
+保护类的方法和属性的手段。对谁可以访问某个方法和属性加上限制，若无权访问则报错。
+
+## public
+
+```c++
+pig.name = "xxx" // 可以直接修改
+
+class Pig:(public/protected/private) Animal {...} //public不做任何修改；protected，将原public改为protected
+```
+
+## bug
+
+BUG无法避免的原因正是因为我门无法模拟各种情况的的输入和修改带来的影响.
+
+# P20覆盖和重载
+
+继承后的重载会出问题。
+
+# P21友元关系
+
+# P22-23静态属性和静态方法
+
+## 目的
+
+非必要的时候不要使用全局变量
+
+在创建和删除对象的时候才允许访问的计数器——静态属性和静态函数
+
+有关数据在该类所有对象之间都可以共享
+
+## static静态变量
+
+## 作用
+
+### 隐藏
+
+### 
+
+## 静态方法
+
+# P24虚方法
+
+# P25抽象方法
+
+## =0
+
+## 多态
+
+一个方法，多种实现
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
