--- a/数据结构.md
+++ b/数据结构.md
@@ -8,7 +8,9 @@
 
 # 2.2.2顺序表的插入删除
 
+1、随机存取就是直接存取，可以通过下标直接访问到元素的位置，与存储位置无关，时间复杂度永远为O(1)，例如数组。存取第N个数据时，不需要访问前（N-1）个数据，直接就可以对第N个数据操作 （array）。
 
+2、非随机存取也叫顺序存取，不能通过下标访问，在存取第N个数据时，必须先访问前（N-1）个数据 ，例如链表。
 
 # 2.3.1单链表的定义
 
